WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121854
[Mac][WK2] Multiple font tests fail is there is a global setting for font antialiasing threshold
https://bugs.webkit.org/show_bug.cgi?id=121854
Summary
[Mac][WK2] Multiple font tests fail is there is a global setting for font ant...
Alexey Proskuryakov
Reported
2013-09-24 12:49:17 PDT
E.g., svg/text/scaling-font-with-geometric-precision.html fails on my machine. The reason is that by the time InjectedBundle::platformInitialize is called, multiple underlying frameworks have already read the value from preferences.
Attachments
proposed fix
(1.80 KB, patch)
2013-09-24 12:51 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-09-24 12:51:56 PDT
Created
attachment 212492
[details]
proposed fix
WebKit Commit Bot
Comment 2
2013-09-24 15:34:14 PDT
Comment on
attachment 212492
[details]
proposed fix Clearing flags on attachment: 212492 Committed
r156365
: <
http://trac.webkit.org/changeset/156365
>
WebKit Commit Bot
Comment 3
2013-09-24 15:34:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug