[Mac][WK2] Multiple font tests fail is there is a global setting for font antialiasing threshold https://bugs.webkit.org/show_bug.cgi?id=121854

Reviewed by Anders Carlsson.

* WebKitTestRunner/InjectedBundle/mac/InjectedBundleMac.mm:
(WTR::InjectedBundle::platformInitialize): Post a notification to update cached
settings in underlying frameworks.


Canonical link: https://commits.webkit.org/139870@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156365 268f45cc-cd09-0410-ab3c-d52691b4dbfc